--- a/app/src/main/res/layout/fragment_add_project.xml
+++ b/app/src/main/res/layout/fragment_add_project.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.add.AddProjectFragment" >
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/apf_toolbar"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/add__new_project" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
