--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/MainFragment"
         android:name="com.jre.projectcounter.ui.main.MainFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/main_fragment"
         tools:layout="@layout/fragment_main"/>
     <fragment
         android:id="@+id/addProjectFragment"
