--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,6 +36,6 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.jre.projectcounter.SettingsFragment"
+        android:name="com.jre.projectcounter.ui.settings.SettingsFragment"
         android:label="SettingsFragment" />
 </navigation>
