--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#284CFF</color>
+    <color name="pink">#FF28B7</color>
+    <color name="yellow">#FFDB28</color>
+    <color name="green">#28FF70</color>
+    <color name="red">#FD2212</color>
 </resources>
