--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
     <style name="ProjectCounter.TextEdit" parent="Widget.AppCompat.EditText">
 
     </style>
+
+    <style name="ProjectCounter.PreferenceTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
 </resources>
